# sxrc

./: .gitignore  Cargo.toml  LICENSE.DUAL.md  LICENSE.GPL-2.0-or-later  README.md
docs/: benchmarks.md  format.md  legacy-linux.md  manifest.md  training.md  zram.md
src/: codebook.rs  file_codec.rs  lib.rs  manifest.rs  ram_codec.rs
tests/: bench_cli.rs  codec.rs  train_cli.rs
tests/support/: mod.rs
