[package]
name = "sxrc"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0 OR GPL-2.0-or-later"
repository = "https://github.com/eilhanzy/sxrc"

[dependencies]
lz4_flex = "0.11.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
zstd = "0.13.3"

[dev-dependencies]
